fixed image and content spacing issue in about section

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -113,28 +113,24 @@ a {
   margin-top: 1rem;
   
   
+  
 }
 
 #about .container .item {
   display: flex;
-  height: 100%; 
   align-items: center;
-  
+  padding: 1rem;
+  border: #333 dotted 1px;
 }
 
-#about .container .item .item-content {
-  text-align: left;
-}
-/* 
-#about .container .item .item-image {
-   width: 100%; 
-  height: 200px;
-} */
+
+
 
 #about .container .item .item-image img {
-  width: 50%;
+  width: 300px;
   border-radius: 5%;
-  margin-left: 1rem;
+  margin: 0 1rem;
+
 }
 
 #about .container .item .item-content h3 {
